--- a/package.json
+++ b/package.json
@@ -24,5 +24,18 @@
   "bugs": {
     "url": "https://github.com/nuruddeensalihu/bowling-challenge-babbel/issues"
   },
-  "homepage": "https://github.com/nuruddeensalihu/bowling-challenge-babbel#readme"
+  "homepage": "https://github.com/nuruddeensalihu/bowling-challenge-babbel#readme",
+  "dependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "css-loader": "^0.24.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2"
+  }
 }
