--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
