--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-runtime": "^6.11.6",
     "css-loader": "^0.24.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
